  - Fixed defect #1639 CdonPosterPlugin not working after site restructure
  - Fixed defect #1641 HDDVDs are identified incorrectly in <videoSouce> tag in XML
  - Fixed defect #1643 No director info in XML file
  - Fixed defect #1646 IMDb NFO not being read correctly
  - Fixed defect #1648 Problem with MovieDbPosterPlugin

MovieJukebox 2.1
----------------
  - Enhancement   #941 Allow rounded corners on graphics
  - Enhancement  #1566 Would be nice to have plot in CSV listing
  - Fixed defect #1402 No Hebrew posters only plot
  - Enhancement  #1483 XBMC-style TV artwork support
  - Enhancement  #1500 More support for folder images, for programs such as meta browser and Ember Media Manager
  - Fixed defect #1503 Filmweb plugin doesn't work after filmweb site has been changed
  - Fixed defect #1506 TV Show episodes titles in IMDB, Filmweb plugin
  - Enhancement  #1507 Search the original movie title by PosterPlugins instead of localized title
  - Enhancement  #1512 Search the original movie title by FanartScanner instead of localized title
  - Fixed defect #1514 Kinopoisk plugin fix
  - Fixed defect #1518 Multi-part video with 10 or more parts uses the wrong NFO
  - Fixed defect #1522 SET Coverart no longer works properly
  - Fixed defect #1526 Small issue with TheMovieDB plugin
  - Enhancement  #1526 Allow regex in filename skip keywords
  - Enhancement  #1526 Ability for multiple IMDB Ids in a NFO file
  - Enhancement  #1530 banner from thetvdb
  - Fixed defect #1531 java.util.NoSuchElementException on most movies
  - Enhancement  #1540 Ability to specify IMDB (or theTVDB) on the filename
  - Fixed defect #1541 Poster english or french
  - Fixed defect #1545 Failed creating thumbnail with Set or Series
  - Fixed defect #1547 KinoPoisk's plugin is malfunction
  - Fixed defect #1549 All movies now seen as new even when re-run
  - Enhancement  #1550 KinoPoisk's plugin can use Top250 rating of movie
  - Enhancement  #1551 KinoPoisk's plugin can use fanart picture